<resources>
    <string name="app_name">GreyareaAD340</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="app_dev">Lyndon Pereira</string>
    <string name="app_dev_class">AD340 - Spring 2018</string>
    <string name="app_blurb">Fun fact: I am a Systems Administrator for a Biomed company and I recently setup a Flash storage array that is 550TB.</string>
    <string name="app_about_blurb">This app currently consists of activities that include sending text to another activity,
                                    Zombie movies displayed in a Recycler View and a Navigation drawer.</string>
    <string name="app_about_app">App Details</string>
    <string name="app_version_">App Version</string>
    <string name="app_version">v4.0 - Spring 2018</string>
    <string name="gridButtonOne">One</string>
    <string name="gridButtonTwo">Two</string>
    <string name="gridButtonThree">Three</string>
    <string name="gridButtonFour">Four</string>
    <string name="menu_action_about_us">About</string>
    <string name="menu_action_setting">Settings</string>
    <string name="title">Title:</string>
    <string name="title_">Title</string>
    <string name="year">Year:</string>
    <string name="year_">Year</string>
    <string name="director">Director:</string>
    <string name="director_">Director</string>
    <string name="zombie_movies">Zombie Movies</string>
    <string name="about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">About</string>
    <string name="hello_blank_fragment2">Movies</string>
    <string name="About_clicked">About Clicked</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>
    <string name="saved_button_text">Saved</string>
    <string name="camera_ownership">Camera Ownership</string>
    <string name="camera_label">Camera Label</string>
    <string name="live_cams">Live Cams</string>
    <string name="title_activity_maps">Location, location</string>
    <string name="maps">Maps</string>


</resources>
