<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_zombies"
            android:icon="@drawable/ic_whatshot_white_24dp"
            android:title="@string/zombie_movies" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_pan_tool_black_24dp"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_cams"
            android:icon="@drawable/ic_priority_high_black_24dp"
            android:title="@string/live_cams" />

    </group>

</menu>